# mosaic-launcher

./: .gitignore  Cargo.toml  README.md
linux/: Cargo.toml
linux/src/: file_manager.rs  lib.rs  main.rs  utils.rs
linux/src/games/minecraft/: auth.rs  launcher.rs  mod.rs  models.rs  modloaders.rs  versions.rs
linux/src/games/minecraft/ui/: login.rs  main_view.rs  mod.rs  play.rs  sidebar.rs
linux/src/ui/: main_view.rs  settings.rs
src/: auth.rs  config.rs  file_manager.rs  main.rs  minecraft.rs  mods.rs
src/games/: mod.rs
src/games/minecraft/: launcher.rs  manager.rs  mod.rs
src/games/minecraft/ui/: mods.rs  ui.rs
src/ui/: app.rs  game_selector.rs  login.rs  main_view.rs  mod.rs  mods.rs  play.rs  profiles.rs  settings.rs
win/: Cargo.toml  tauri.conf.json
win/capabilities/: default.json
win/src/: main.rs  tauri.conf.json
