[package]
name = "mosaic-launcher"
version = "0.1.0"
edition = "2021"
authors = ["Mosaic Launcher Team"]
description = "A modern, cross-platform Minecraft launcher with mod management features"

[dependencies]
# GUI
gtk4 = { version = "0.7", features = ["v4_10"] }
libadwaita = "0.5"

# HTTP and API
reqwest = { version = "0.11", features = ["json", "stream"] }
oauth2 = "4.4"

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
tokio = { version = "1.32", features = ["full"] }
futures = "0.3"

# Utilities
anyhow = "1.0"     # Error handling
thiserror = "1.0"  # Error definitions
log = "0.4"        # Logging
env_logger = "0.10" # Logging implementation
directories = "5.0" # Platform-specific directories
zip = "0.6"        # For handling zip files
sha1 = "0.10"      # For hash verification
sha2 = "0.10"      # For hash verification
url = "2.4"        # URL parsing
chrono = { version = "0.4", features = ["serde"] } # Date/time handling
uuid = { version = "1.4", features = ["v4"] } # UUID generation
